day-28/system-design/python/src/rabbit/manifets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672  # Port to expose on the service
      targetPort: 15672  # Port on which the container is listening
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
