day-28/system-design/python/src/rabbit/manifets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
    - host: rabbitmq-manager.com  # Replace with your domain or hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq # Name of the backend service
                port:
                  number: 15672      # Port of the backend service
  # Add any other Ingress configuration here, such as TLS, annotations, etc.
